<resources>
    <string name="app_name">Open Sooq</string>
    <string name="search_category">Search for category or subcategory</string>
    <string name="select_category">Select Category</string>
    <string name="select_subcategory">Select Subcategory</string>
    <string name="no_item">Subcategories not available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="from">From</string>
    <string name="any">Any</string>
    <string name="to">To</string>
    <string name="reset">Reset Fields </string>
    <string name="filter_results">Filter Results(%s)</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
</resources>