<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_white"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:hint="Model" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_search_view"
        app:tabSelectedTextColor="@color/blue"
        app:tabTextColor="@color/gray">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_numeric_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:saveEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@color/white"
            android:elevation="0dp"
            android:paddingHorizontal="5dp"
            android:paddingVertical="15dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:gravity="end"
            android:textColor="@color/blue"
            android:layout_marginHorizontal="10dp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>